--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     Your browser doesn't support HTML5 canvas. Try Google Chrome!
     </canvas>
 
-    <script src="rows.js"></script>
-    <script src="objects.js"></script>
-    <script src="scripts.js"></script>
+    <script src="js/rows.js"></script>
+    <script src="js/objects.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
