--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta name="description" content="The classic game of Frogger.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Frogger</title>
+    <title>Turtle</title>
 
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
 <body>
-    <h1>Frogger</h1>
+    <h1>Turtle</h1>
     <p>This is a Frogger game implemented with HTML5 canvas.</p>
 
     <canvas id="game">
