clarifying that you will play as a turtle.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>Turtle</h1>
-    <p>This is a Frogger game implemented with HTML5 canvas.</p>
+    <p>This is a Frogger game implemented with HTML5 canvas.<br>But you play as a pink turtle instead of a frog.</p>
 
     <canvas id="game">
     Your browser doesn't support HTML5 canvas. Try Google Chrome!
