--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <script src="js/rows.js"></script>
     <script src="js/objects.js"></script>
+    <script src="js/turtle.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 </html>
